# OpenMPI

./: CMakeLists.txt  main.cpp
tasks/: Task.cpp  Task.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h  Task4.cpp  Task4.h  Task5.cpp  Task5.h
